# SERA

./: .gitignore  CLAUDE.md  README.md  TASK.md  pyproject.toml  run_research.py
docs/: api_usage.md  architecture.md  configuration.md  quickstart.md  related_work.md  reproducibility.md  setup_gpu.md  workflow.md
docs/modules/: ablation.md  adapter_manager.md  agent_functions.md  agent_llm.md  agent_loop.md  bootstrap_evaluator.md  docker_executor.md  evaluator.md  evidence_store.md  experiment_generator.md  failure_extractor.md  latex_composer.md  local_executor.md  mcp_client.md  paper_composer.md  paper_evaluator.md  ppo_trainer.md  (+8 more)
scripts/: run_ablation_full.sh  run_ablation_no_echo.sh  run_ablation_no_hiper.sh  run_ablation_no_lora.sh  run_full_pipeline.sh  run_paper.sh  run_research.sh  setup_env.sh
sera_workspace/: main.cpp
task/: 00_mission_principles.md  01_overview_input.md  02_phase0_related_work.md  03_phase1_spec.md  04_phase2_search.md  05_phase3_execution.md  06_phase4_evaluation.md  07_phase5_learning.md  08_phase6_lineage.md  09_phase7_paper.md  10_phase8_paper_eval.md  11_defaults_directory_docs.md  12_cli_logging.md  13_requirements_mvp.md  14_module_structure.md  15_appendix.md  16_implementation_guide.md  17_multilang.md  17_slurm.md  18_agent_model.md  18_slurm.md  19_agent_model.md  19_tool_using_agent.md  20_setup_wizard.md  20_tool_using_agent.md  21_agent_functions.md  21_setup_wizard.md  22_agent_functions.md  22_tool_execution.md  23_tool_execution.md  23_visualization.md  24_visualization.md  README.md
tests/: conftest.py
(+180 files in other folders)
